# pieuvre

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy_full_v2.txt  clippy_post_rename.txt  clippy_warnings.txt  deny.toml  final_release_build.txt  full_errors.txt
.agent/workflows/: orchestrator_agent.md  rnd_agent.md  senior_dev_agent.md
.config/: nextest.toml
.github/workflows/: ci.yml  docs.yml  release.yml
config/: README.md  default.toml  telemetry-domains.txt
config/profiles/: gaming.toml  privacy.toml  workstation.toml
crates/pieuvre-audit/: Cargo.toml  README.md
crates/pieuvre-audit/src/: appx.rs  compliance.rs  hardware.rs  lib.rs  network.rs  registry.rs  security.rs  services.rs  tests.rs
crates/pieuvre-audit/src/etw/: mod.rs  monitor.rs  parser.rs  resolver.rs  session.rs
crates/pieuvre-cli/: Cargo.toml  README.md  build.rs
crates/pieuvre-cli/src/: main.rs  tests.rs
crates/pieuvre-cli/src/commands/: analyze.rs  audit.rs  completions.rs  interactive.rs  mod.rs  rollback.rs  status.rs  sync.rs  verify.rs
crates/pieuvre-cli/src/commands/interactive/: dashboard.rs  executor.rs  mod.rs  sections.rs  types.rs  ui.rs
crates/pieuvre-cli/src/commands/interactive/sections/: audit.rs  bloatware.rs  maintenance.rs  mod.rs  network.rs  oo_privacy.rs  performance.rs  privacy.rs  scan.rs  security.rs  services.rs  sync.rs  system.rs  telemetry.rs
crates/pieuvre-cli/src/commands/interactive/tui/: app.rs  events.rs  i18n.rs  mod.rs  ui.rs
crates/pieuvre-cli/src/commands/interactive/tui/components/: footer.rs  header.rs  main_view.rs  mod.rs  sidebar.rs
crates/pieuvre-common/: Cargo.toml  README.md
crates/pieuvre-common/src/: config.rs  error.rs  lib.rs  privilege.rs  types.rs  wmi_utils.rs
crates/pieuvre-gui/: Cargo.toml
crates/pieuvre-gui/src/: callbacks.rs  init.rs  lib.rs  main.rs  models.rs  tests.rs  worker.rs
crates/pieuvre-gui/ui/: globals.slint  main.slint  tokens.slint
crates/pieuvre-gui/ui/components/: button.slint  category_group.slint  checkbox.slint  progress_bar.slint  status_badge.slint  toast.slint  toggle.slint
crates/pieuvre-gui/ui/views/: audit.slint  dashboard.slint  header.slint  optimizations.slint  profiles.slint  settings.slint  sidebar.slint  snapshots.slint  statusbar.slint
crates/pieuvre-persist/: Cargo.toml  README.md
crates/pieuvre-persist/src/: lib.rs  snapshot.rs  tests.rs
crates/pieuvre-scan/: Cargo.toml  README.md  ROADMAP.md
crates/pieuvre-scan/src/: error.rs  lib.rs  privileges.rs  tests.rs
crates/pieuvre-scan/src/engine/: browser.rs  lnk.rs  mod.rs  registry.rs  signatures.rs  walker.rs
crates/pieuvre-scan/src/remediation/: mod.rs
crates/pieuvre-sync/: Cargo.toml  README.md
crates/pieuvre-sync/src/: ai.rs  appx.rs  cleanup.rs  context_menu.rs  cpu.rs  dns.rs  dpc.rs  edge.rs  explorer.rs  firewall.rs  game_mode.rs  hardening.rs  hosts.rs  interrupts.rs  lib.rs  memory.rs  msi.rs  network.rs  onedrive.rs  operation.rs  power.rs  privacy_o_o.rs  registry.rs  rollback.rs  scheduled_tasks.rs  security.rs  services.rs  tests.rs  timer.rs  widgets.rs  windows_update.rs
crates/pieuvre-sync/src/sentinel/: monitor.rs
docs/: ARCHITECTURE.md  O&O ShutUp10++ et Rust pour Windows 11.md  Scanner Rust pour Windows 11.md  TECHNICAL.md  instructions_Scanner Rust Windows 11.md
