[workspace]
resolver = "2"
members = [
    "crates/pieuvre-cli",
    "crates/pieuvre-common",
    "crates/pieuvre-audit",
    "crates/pieuvre-sync",
    "crates/pieuvre-persist",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pieuvre/pieuvre"
authors = ["Pieuvre Contributors"]
description = "Outil SOTA d'alignement système Windows 11"
readme = "README.md"
keywords = ["windows", "optimization", "system", "gaming", "privacy"]
categories = ["os::windows-apis", "config"]

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Windows APIs - SOTA 2026
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Dxgi",
]}
windows-sys = "0.61"

# Registry parsing
nt_hive2 = "4.2"
memmap2 = "0.9"

# CLI - SOTA 2026
clap = { version = "4.5.23", features = ["derive", "env"] }
clap_complete = "4.5"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Compression & Checksums - SOTA 2026
zstd = "0.13"
sha2 = "0.10"

# Testing
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
