[workspace]
resolver = "2"
members = [
    "crates/pieuvre-cli",
    "crates/pieuvre-common",
    "crates/pieuvre-audit",
    "crates/pieuvre-sync",
    "crates/pieuvre-persist",
]

[workspace.package]
version = "0.6.2"

edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pieuvre/pieuvre"
authors = ["pieuvre Contributors"]
description = "Windows 11 system alignment and optimization tool"
readme = "README.md"
keywords = ["windows", "optimization", "system", "gaming", "privacy"]
categories = ["os::windows-apis", "config"]

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
once_cell = "1.19"

# Windows APIs
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Dxgi",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
]}
windows-sys = "0.61"

# Registry parsing
nt_hive2 = "4.2"
memmap2 = "0.9"

# CLI
clap = { version = "4.5.23", features = ["derive", "env"] }
clap_complete = "4.5"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Compression & Checksums
zstd = "0.13"
sha2 = "0.10"

# Testing
tempfile = "3.0"

# Parsing & Data
rust-ini = "0.21"
csv = "1.3"
winreg = "0.52"

# Build dependencies
winres = "0.1"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
