[package]
name = "pieuvre-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Types partagés et configuration pour Pieuvre"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
windows.workspace = true
