[package]
name = "pieuvre-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Types partagés et configuration pour pieuvre"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
windows = { workspace = true, features = [
    "Win32_System_Threading",
    "Win32_System_Wmi",
    "Win32_System_Variant",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_Security",
] }
