[package]
name = "pieuvre-persist"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Module de persistance et rollback pour Pieuvre"

[dependencies]
pieuvre-common = { path = "../pieuvre-common" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Windows APIs
windows.workspace = true
