[package]
name = "pieuvre-persist"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Module de persistance et rollback pour pieuvre"

[dependencies]
pieuvre-common = { path = "../pieuvre-common" }
pieuvre-sync = { path = "../pieuvre-sync" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Windows APIs
windows.workspace = true

# Compression & Checksums - SOTA 2026
zstd.workspace = true
sha2.workspace = true
