[package]
name = "pieuvre-scan"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core
pieuvre-common = { path = "../pieuvre-common" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rayon = "1.10"
once_cell = { workspace = true }

# Windows APIs (SOTA: windows-sys for performance)
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_ProcessStatus",
] }

# Windows (only for COM/WMI if needed)
windows = { workspace = true }

# Forensics & Engine
yara-x = "0.11"
aho-corasick = "1.1"
rusqlite = { version = "0.32", features = ["bundled"] }
simd-json = "0.14"
ignore = "0.4"
parselnk = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
