[package]
name = "pieuvre-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Module de synchronisation pour Pieuvre"

[dependencies]
pieuvre-common = { path = "../pieuvre-common" }
pieuvre-audit = { path = "../pieuvre-audit" }

serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true
toml.workspace = true

# Windows APIs
windows.workspace = true
windows-sys.workspace = true
